# autothreatai

./: .env.example  .gitignore  .pre-commit.yaml  AGENTS.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  run_local.py  sample_ref_arch.txt  skills.md
.claude/: settings.json  settings.template.json
.github/workflows/: audit.yml  release.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+206 more)
agents/: Dockerfile  entrypoint.sh
agents/architecture_parser/: __init__.py  agent.py  instructions.txt  instructions.yaml
agents/meastro_threat_modeler/: __init__.py  agent.py  instructions.yaml
app/: Dockerfile  serve_agents.py  server.py
config/: providers.json
shared/: types.ts
tests/: test_agent_factory.py  test_per_agent_config.py
(+6804 files in other folders)
