[project]
name = "autothreat-ai"
version = "0.1.0"
description = "An automated threat modeling platform built with Google Agent Development Kit (ADK) and Gemini."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=1.22.1",
    "google-genai>=1.59.0",
    "markdown-pdf>=1.10",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.0,<0.7",
    "sqlalchemy-stubs",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git", "node_modules", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist",
    "^app/_agent_wrapper_.*\\.py$",
]

[[tool.mypy.overrides]]
module = "shared.tools.a2a_utils"
ignore_errors = true

[[tool.mypy.overrides]]
module = "shared.utils.file_loader"
ignore_errors = true
